@@ -106,7 +106,7 @@ Film::Film (boost::filesystem::path dir)
 	, _j2k_bandwidth (Config::instance()->default_j2k_bandwidth ())
 	, _dci_metadata (Config::instance()->default_dci_metadata ())
 	, _video_frame_rate (24)
-	, _audio_channels (MAX_AUDIO_CHANNELS)
+	, _audio_channels (6)
 	, _three_d (false)
 	, _sequence_video (true)
 	, _interop (false)
